1.go优化
