# models/user.go
@@ -10,18 +10,25 @@ func init() {
 
 
 type User struct {
-	Id       int
-	Username string
-	Password string
-	Gender   string
-	Age      string
-	Address  string
-	Email    string
+	Id       int 		`json:"id"`
+	Username string		`json:"userName"`
+	Password string		`json:"Password"`
+	Gender   string		`json:"Gender"`
+	Age      string		`json:"Age"`
+	Address  string		`json:"Address"`
+	Email    string		`json:"Email"`
 }
 
 func GetUserById(id int) (u User, err error) {
 	o := orm.NewOrm()
 	var user User
 	err = o.QueryTable(user).Filter("Id", id).One(&user)
+	return user,err
+}
+
+func GetUserByUsername(username string) (u User, err error) {
+	o := orm.NewOrm()
+	var user User
+	err = o.QueryTable(user).Filter("Username", username).One(&user)
 	return user,err
 }
