# routers/router.go
@@ -9,25 +9,24 @@ package routers
 
 import (
 	"api/controllers"
-
 	"github.com/astaxie/beego"
 )
 
 func init() {
 	ns := beego.NewNamespace("/v1",
-		beego.NSNamespace("/object",
+		beego.NSNamespace("/artical",
 			beego.NSInclude(
-				&controllers.ObjectController{},
-			),
-		),
-		beego.NSNamespace("/user",
-			beego.NSInclude(
-				&controllers.UserController{},
+				&controllers.ArticalController{},
 			),
 		),
 		beego.NSNamespace("/account",
 			beego.NSInclude(
 				&controllers.AccountController{},
+			),
+		),
+		beego.NSNamespace("/user",
+			beego.NSInclude(
+				&controllers.UserController{},
 			),
 		),
 	)
